White space at bottom fix

--- a/iOS/www/css/common.css
+++ b/iOS/www/css/common.css
@@ -10,6 +10,9 @@ a {
 }
 
 html, body {
+	background-color: red;
+	max-width: 100%;
+	max-height: 100%;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
